remove unused tasks in build.gradle